xml/src1/objects/Position__c.object
<CustomObject>
    <description>Positions in Organization Types</description>
    <fields>
        <fullName>Africa_University_Board__c</fullName>
        <description>Africa University Board</description>
        <label>Africa University Board</label>
        <picklist>
            <picklistValues>
                <fullName>United States and Zimbabwe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zimbabwe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <description>Commissions</description>
        <label>Commission</label>
        <picklist>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Commission on Pre-collegiate Schools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commission on Institutional Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commission on Black Colleges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commission on Theological Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Committee__c</fullName>
        <description>Committee for GBHEM Board of Direcrors</description>
        <inlineHelpText>Select committee(s) to which Board Member is assigned</inlineHelpText>
        <label>Committee</label>
        <picklist>
            <controllingField>Position_Title__c</controllingField>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Members Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit and Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bylaws</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Church Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHE Executive Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOM Executive Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EIIA Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endorsing Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluation and Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Education and Ministry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legislative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loans and Scholarships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nominating Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personnel and Policies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-collegiate Schools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Racial and Ethnic Concerns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Plan Advisory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Position the contact is holding</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Positions</relationshipLabel>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Term__c</fullName>
        <description>Current Term</description>
        <label>Current Term</label>
        <picklist>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Limit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Approved_Endorsed__c</fullName>
        <description>Date Approved or endorsed for Umea Position</description>
        <label>Date Approved/Endorsed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <description>Employment Status</description>
        <label>Employment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seasonal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End date of the Position</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>General_Conference_Year__c</fullName>
        <description>Conference year</description>
        <label>General Conference Year</label>
        <picklist>
            <controllingField>Position_Title__c</controllingField>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2032</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legislative_Committee__c</fullName>
        <inlineHelpText>Select committee to which delegate is assigned</inlineHelpText>
        <label>Legislative Committee</label>
        <picklist>
            <controllingField>Position_Title__c</controllingField>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Church and Society 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Church and Society 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conferences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discipleship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faith and Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Ministries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Commissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Judicial Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Church</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ministry and Higher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Superintendency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mailing_AddressLine1__c</fullName>
        <description>Contact mailing Address Line 1 or Organization Mailing Address Line 1</description>
        <formula>IF(   Contact__r.Contact_Address_Line1__c   != null
,Contact__r.Contact_Address_Line1__c
,  IF((Contact__c == null &amp;&amp;  Organization_Name__r.Organization_Mailing_AddressLine1__c !=null)
, Organization_Name__r.Organization_Mailing_AddressLine1__c 
, IF( Contact__c != null &amp;&amp; (Contact__r.Contact_Address_Line1__c   == null ||   Contact__r.Contact_Address_Line2__c == null || Contact__r.Contact_City__c == null ) &amp;&amp; (Organization_Name__r.Organization_Mailing_AddressLine1__c  != null)
, Organization_Name__r.Organization_Mailing_AddressLine1__c
, null)  ))</formula>
        <label>Mailing Address Line1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Line2__c</fullName>
        <formula>IF(  Contact__r.Contact_Address_Line2__c  != null 
,Contact__r.Contact_Address_Line2__c
, IF((Contact__c == null &amp;&amp;   Organization_Name__r.Organization_Mailing_Address_Line2__c !=null)
, Organization_Name__r.Organization_Mailing_Address_Line2__c 
, IF( Contact__c != null &amp;&amp; (Contact__r.Contact_Address_Line1__c   == null ||   Contact__r.Contact_Address_Line2__c == null || Contact__r.Contact_City__c == null ) &amp;&amp; (Organization_Name__r.Organization_Mailing_Address_Line2__c   != null)
, Organization_Name__r.Organization_Mailing_Address_Line2__c 
, null)  ))</formula>
        <label>Mailing Address Line2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <description>Contact mailing city or Organization Mailing city</description>
        <formula>IF( Contact__r.Contact_City__c  != null
,Contact__r.Contact_City__c
,  IF((Contact__c == null &amp;&amp;   Organization_Name__r.Organization_Mailing_City__c  !=null)
, Organization_Name__r.Organization_Mailing_City__c
, IF( Contact__c != null &amp;&amp; (Contact__r.Contact_Address_Line1__c   == null ||   Contact__r.Contact_Address_Line2__c == null || Contact__r.Contact_City__c == null ) &amp;&amp; (Organization_Name__r.Organization_Mailing_City__c  != null)
, Organization_Name__r.Organization_Mailing_City__c
, null)  ))</formula>
        <label>Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Country__c</fullName>
        <description>Contact Country or Organization Country</description>
        <formula>IF( Contact__r.Contact_Country__c   != null
,  Contact__r.Contact_Country__c 
,  IF((Contact__c == null &amp;&amp;   Organization_Name__r.Organization_Mailing_Country__c  !=null)
, Organization_Name__r.Organization_Mailing_Country__c 
, IF( Contact__c != null &amp;&amp; (Contact__r.Contact_Address_Line1__c   == null ||   Contact__r.Contact_Address_Line2__c == null || Contact__r.Contact_City__c == null ) &amp;&amp; (Organization_Name__r.Organization_Mailing_Country__c   != null)
, Organization_Name__r.Organization_Mailing_Country__c 
, null)  ))</formula>
        <label>Mailing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State__c</fullName>
        <description>Contact state or Organization State</description>
        <formula>IF(  Contact__r.Contact_State__c  != null
,  Contact__r.Contact_State__c
, IF((Contact__c == null &amp;&amp;   Organization_Name__r.Organization_Mailing_State__c  !=null)
,  Organization_Name__r.Organization_Mailing_State__c 
, IF( Contact__c != null &amp;&amp; (Contact__r.Contact_Address_Line1__c   == null ||   Contact__r.Contact_Address_Line2__c == null || Contact__r.Contact_City__c == null ) &amp;&amp; ( Organization_Name__r.Organization_Mailing_State__c   != null)
,  Organization_Name__r.Organization_Mailing_State__c 
, null)  ))</formula>
        <label>Mailing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Zip_Postal_Code__c</fullName>
        <description>Contact Postal code or Organization Postal code</description>
        <formula>IF(   Contact__r.Contact_Zip_Postal_Code__c  != null
,Contact__r.Contact_Zip_Postal_Code__c 
,  IF((Contact__c == null &amp;&amp;   Organization_Name__r.Organization_Mailing_Zip_Postal_Code__c  !=null)
, Organization_Name__r.Organization_Mailing_Zip_Postal_Code__c 
, IF( Contact__c != null &amp;&amp; (Contact__r.Contact_Address_Line1__c   == null ||   Contact__r.Contact_Address_Line2__c == null || Contact__r.Contact_City__c == null ) &amp;&amp; (Organization_Name__r.Organization_Mailing_Zip_Postal_Code__c   != null)
, Organization_Name__r.Organization_Mailing_Zip_Postal_Code__c 
, null)  ))</formula>
        <label>Mailing Zip/Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Key__c</fullName>
        <description>This field is for migration purposes only.</description>
        <inlineHelpText>This field is for migration purposes only.</inlineHelpText>
        <label>Migration Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Position  Organization Name</description>
        <label>Organization Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Positions</relationshipLabel>
        <relationshipName>Position</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position_Title_Other__c</fullName>
        <description>If Position Title is not available,Then we should be able to enter value into this</description>
        <inlineHelpText>Enter position title if not listed in drop down.  Do NOT enter preferred titles here</inlineHelpText>
        <label>Position Title (Other/Specify)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Title__c</fullName>
        <description>Position in the organizations</description>
        <inlineHelpText>Select title that best describes contact&apos;s position</inlineHelpText>
        <label>Position Title</label>
        <picklist>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative Assistant to the President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator/Business Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult Discipleship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advocacy/Social Justice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa University Senate Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Conference Treasurer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant District Superintendent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate District Superintendent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Pastor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHECM Chair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bishop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bishops Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board DHE Vice Chair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board DOM Vice Chair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board of Trustees Chairperson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Recording Secretary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOM Chair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOM Co-Chair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOM Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOM Registrar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOM Staff Network Position</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Manager of General Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camp Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camping &amp; Retreat Ministries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campus Minister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chair</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Title__c</fullName>
        <description>Preferred title for the Position</description>
        <inlineHelpText>Enter the Preferred Title when the Contacts Preferred Title is different from their &apos;Position Title&apos;</inlineHelpText>
        <label>Preferred Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Representation__c</fullName>
        <description>Representation</description>
        <inlineHelpText>Select body who chose contact to serve on the Board of Directors</inlineHelpText>
        <label>Representation</label>
        <picklist>
            <picklistValues>
                <fullName>Missing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>General Board of Global Ministries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Board of Higher Education and Ministry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Europe Central Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany Central Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa Central Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congo Central Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Africa Central Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date of the Position</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>All_Positions</fullName>
        <columns>NAME</columns>
        <columns>Organization_Name__c</columns>
        <columns>Contact__c</columns>
        <columns>Position_Title__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Positions</label>
    </listViews>
    <listViews>
        <fullName>Educational_Institutions_Positions</fullName>
        <columns>NAME</columns>
        <columns>Organization_Name__c</columns>
        <columns>Contact__c</columns>
        <columns>Position_Title__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Position__c.Educational_Institutions</value>
        </filters>
        <label>Educational Institutions (Positions)</label>
    </listViews>
    <listViews>
        <fullName>Position_Board_of_Trustees_Chairperson</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Organization_Name__c</columns>
        <columns>Contact__c</columns>
        <columns>Position_Title__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Position_Title__c</field>
            <operation>equals</operation>
            <value>Board of Trustees Chairperson</value>
        </filters>
        <label>Position : Board of Trustees Chairperson</label>
    </listViews>
    <nameField>
        <displayFormat>Position-{00000000}</displayFormat>
        <label>Position ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <recordTypes>
        <fullName>Africa_University_Board_of_Directors</fullName>
        <active>true</active>
        <description>Africa University Board of Directors</description>
        <label>Africa University Board of Directors</label>
    </recordTypes>
    <recordTypes>
        <fullName>Annual_Conference</fullName>
        <active>true</active>
        <description>Volunteer and staff positions of the annual conference</description>
        <label>Annual Conference</label>
    </recordTypes>
    <recordTypes>
        <fullName>Chaplain_Positions</fullName>
        <active>true</active>
        <description>Endorsed or approved chaplains, pastoral counselors, and spiritual directors</description>
        <label>Chaplain Positions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Collegiate_Ministry</fullName>
        <active>true</active>
        <description>Clergy serving at a Campus Ministry</description>
        <label>Collegiate Ministry</label>
    </recordTypes>
    <recordTypes>
        <fullName>Connectional_Table</fullName>
        <active>true</active>
        <description>Members of the Connectional Table</description>
        <label>Connectional Table</label>
    </recordTypes>
    <recordTypes>
        <fullName>District</fullName>
        <active>true</active>
        <description>Positions of the district office</description>
        <label>District</label>
    </recordTypes>
    <recordTypes>
        <fullName>Educational_Institutions</fullName>
        <active>true</active>
        <description>Faculty and staff of Schools, Colleges, Universities, and Theological Schools</description>
        <label>Educational Institutions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Episcopal_Area</fullName>
        <active>true</active>
        <description>Positions of the Episcopal Area</description>
        <label>Episcopal Area</label>
    </recordTypes>
    <recordTypes>
        <fullName>GBHEM_Board_of_Directors</fullName>
        <active>true</active>
        <description>Only members of the board of directors not GBHEM staff positions</description>
        <label>GBHEM Board of Directors</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Boards_and_Agencies</fullName>
        <active>true</active>
        <description>Staff of the General Boards and Agencies organizations</description>
        <label>General Boards and Agencies</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Conference</fullName>
        <active>true</active>
        <description>Officers and Delegates of General Conference</description>
        <label>General Conference</label>
    </recordTypes>
    <recordTypes>
        <fullName>IAMSCU_Board</fullName>
        <active>true</active>
        <description>Members of the International Association of Methodist Schools, Colleges, and Universities Board of Directors</description>
        <label>IAMSCU Board</label>
    </recordTypes>
    <recordTypes>
        <fullName>Local_Church</fullName>
        <active>true</active>
        <description>Clergy, staff, and volunteer positions of a Local Church</description>
        <label>Local Church</label>
    </recordTypes>
    <recordTypes>
        <fullName>NASCUMC_Board</fullName>
        <active>true</active>
        <description>Members of the National Association of Schools Colleges and Universities Related to The United Methodist Church Board of Directors</description>
        <label>NASCUMC Board</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_ABLC_Extension_Ministry</fullName>
        <active>true</active>
        <description>Positions of clergy Appointed Beyond the Local Church or to Extension Ministries that are not otherwise listed</description>
        <label>Other ABLC/Extension Ministry</label>
    </recordTypes>
    <recordTypes>
        <fullName>UMHEF_Board_of_Trustees</fullName>
        <active>true</active>
        <description>Members of United Methodist Higher Education Foundation Board of Trustees</description>
        <label>UMHEF Board of Trustees</label>
    </recordTypes>
    <recordTypes>
        <fullName>University_Senate</fullName>
        <active>true</active>
        <description>Members of University Senate</description>
        <label>University Senate</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Contact_Organization_Required</fullName>
        <active>true</active>
        <description>Contact Or Organization required</description>
        <errorConditionFormula>AND(ISBLANK( Contact__c), 
ISBLANK(Organization_Name__c ))</errorConditionFormula>
        <errorMessage>Either Organization or Contact Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PositionTitle_Conact_required</fullName>
        <active>true</active>
        <description>Either Position title or Contact Field values are required</description>
        <errorConditionFormula>AND(ISBLANK( Contact__c),  
OR( ISPICKVAL(Position_Title__c, &apos;Missing&apos;) , ISBLANK(TEXT(Position_Title__c)) ) )</errorConditionFormula>
        <errorMessage>Either Position Title Or Contact Field values are required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PositionTitle_Disable_PositionTitleOther</fullName>
        <active>true</active>
        <description>If the &apos;Position Title&apos; value is not &apos;Other/Specify&apos; .then &apos;Position Title Other&apos; should not have a value</description>
        <errorConditionFormula>AND(NOT( ISPICKVAL( Position_Title__c  ,&quot;Other/Specify&quot;)) ,NOT( ISBLANK(  Position_Title_Other__c  ) ))</errorConditionFormula>
        <errorDisplayField>Position_Title_Other__c</errorDisplayField>
        <errorMessage>&apos;Position Title (Other/Specify) Should Not contain a value,If &apos;Position Title&apos;  is NOT &apos;Other/Specify&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Position_Title_Other</fullName>
        <active>true</active>
        <description>If the &apos;Position Title&apos; is &apos;Others/Specify&apos; .Then user should enter a value in the &apos;Position_Title_Other__c&apos;</description>
        <errorConditionFormula>AND( ISPICKVAL(  Position_Title__c  ,&quot;Other/Specify&quot;) , ISBLANK(  Position_Title_Other__c  ) )</errorConditionFormula>
        <errorDisplayField>Position_Title_Other__c</errorDisplayField>
        <errorMessage>&apos;Position Title (Other/Specify) &apos; Should contain a value,If the &apos;Position Title&apos; is &apos;Others/Specify&apos;</errorMessage>
    </validationRules>
</CustomObject>